c/yacc.output
Terminals unused in grammar

   ARROW


State 11 충돌: 2 쉬프트/리듀스
State 31 충돌: 2 쉬프트/리듀스
State 35 충돌: 2 쉬프트/리듀스
State 36 충돌: 2 쉬프트/리듀스
State 39 충돌: 1 쉬프트/리듀스
State 46 충돌: 1 쉬프트/리듀스
State 82 충돌: 1 쉬프트/리듀스
State 133 충돌: 1 쉬프트/리듀스
State 163 충돌: 1 쉬프트/리듀스
State 177 충돌: 1 쉬프트/리듀스
State 178 충돌: 1 쉬프트/리듀스
State 179 충돌: 1 쉬프트/리듀스
State 180 충돌: 1 쉬프트/리듀스
State 185 충돌: 1 쉬프트/리듀스
State 186 충돌: 1 쉬프트/리듀스
State 197 충돌: 1 쉬프트/리듀스
State 198 충돌: 1 쉬프트/리듀스
State 205 충돌: 1 쉬프트/리듀스
State 206 충돌: 1 쉬프트/리듀스


문법

    0 $accept: program $end

    1 program: MAINPROG IDENT ";" declarations subprograms
    2        | MAINPROG error ";" declarations subprograms
    3        | MAINPROG IDENT error declarations subprograms
    4        | MAINPROG error declarations subprograms

    5 declarations: type identifier_list ";" declarations
    6             | type identifier_list error declarations
    7             | %empty

    8 identifier_list: IDENT init
    9                | IDENT init "," identifier_list
   10                | error

   11 init: ASS expr
   12     | %empty
   13     | ASS error

   14 type: standard_type
   15     | standard_type "[" NUMBER "]"
   16     | standard_type "[" NUMBER error
   17     | standard_type "[" error
   18     | standard_type "[" error "]"
   19     | standard_type NUMBER "]"
   20     | standard_type NUMBER error
   21     | standard_type "]"

   22 standard_type: INT
   23              | FLOAT

   24 subprograms: subprogram subprograms
   25            | %empty

   26 subprogram: subprogram_head block

   27 subprogram_head: FUNCTION IDENT args ":" type
   28                | FUNCTION error args ":" type
   29                | FUNCTION IDENT args error type
   30                | FUNCTION error args error type
   31                | FUNCTION IDENT args
   32                | FUNCTION error args

   33 args: "(" params ")"
   34     | "(" params error
   35     | %empty

   36 params: param
   37       | param "," params

   38 param: IDENT ":" type
   39      | IDENT error type
   40      | IDENT ":" IDENT
   41      | IDENT ":" type error

   42 block: BEG declarations stmts END
   43      | BEG declarations stmts error

   44 stmts: stmt stmts
   45      | %empty

   46 stmt: stmt_semi ";"
   47     | stmt_semi error
   48     | error ";"
   49     | block
   50     | if
   51     | while
   52     | for

   53 stmt_semi: expr
   54          | BREAK
   55          | CONTINUE
   56          | RETURN expr
   57          | RETURN error
   58          | NOP

   59 if: IF expr ":" stmt elif else
   60   | IF expr error stmt elif else

   61 elif: ELIF expr ":" stmt elif
   62     | %empty
   63     | ELIF expr error stmt elif

   64 else: ELSE ":" stmt
   65     | %empty
   66     | ELSE error stmt

   67 while: WHILE expr ":" stmt else
   68      | WHILE expr error stmt else

   69 for: FOR expr IN expr ":" stmt else
   70    | FOR expr IN expr error stmt else

   71 variable: IDENT
   72         | IDENT "[" expr "]"
   73         | IDENT "[" expr error

   74 procedure: IDENT "(" expr_list ")"
   75          | IDENT "(" expr_list error

   76 expr_list: exprs
   77          | %empty

   78 exprs: expr
   79      | expr "," exprs
   80      | expr error exprs

   81 expr: term
   82     | expr ASS expr
   83     | expr GREATER expr
   84     | expr EQUGRE expr
   85     | expr LESS expr
   86     | expr EQULESS expr
   87     | expr EQUAL expr
   88     | expr NOTEQU expr
   89     | expr ADD expr
   90     | expr SUB expr
   91     | expr MUL expr
   92     | expr DIV expr
   93     | expr IN expr
   94     | ADD expr
   95     | SUB expr
   96     | NOT expr
   97     | expr ASS error
   98     | expr GREATER error
   99     | expr EQUGRE error
  100     | expr LESS error
  101     | expr EQULESS error
  102     | expr EQUAL error
  103     | expr NOTEQU error
  104     | expr ADD error
  105     | expr SUB error
  106     | expr MUL error
  107     | expr DIV error
  108     | expr IN error
  109     | ADD error
  110     | SUB error
  111     | NOT error

  112 term: NUMBER
  113     | variable
  114     | procedure
  115     | "(" expr ")"
  116     | "(" expr error
  117     | type term
  118     | type


Terminals, with rules where they appear

$end (0) 0
error (256) 2 3 4 6 10 13 16 17 18 20 28 29 30 32 34 39 41 43 47 48
    57 60 63 66 68 70 73 75 80 97 98 99 100 101 102 103 104 105 106
    107 108 109 110 111 116
NUMBER (258) 15 16 19 20 112
IDENT (259) 1 3 8 9 27 29 31 38 39 40 41 71 72 73 74 75
ASS (260) 11 13 82 97
EQUAL (261) 87 102
NOTEQU (262) 88 103
GREATER (263) 83 98
EQUGRE (264) 84 99
LESS (265) 85 100
EQULESS (266) 86 101
IN (267) 69 70 93 108
ADD (268) 89 94 104 109
SUB (269) 90 95 105 110
MUL (270) 91 106
DIV (271) 92 107
UMINUS (272)
UPLUS (273)
NOT (274) 96 111
"(" (275) 33 34 74 75 115 116
")" (276) 33 74 115
"[" (277) 15 16 17 18 72 73
"]" (278) 15 18 19 21 72
"," (279) 9 37 79
";" (280) 1 2 5 46 48
":" (281) 27 28 38 40 41 59 61 64 67 69
MAINPROG (282) 1 2 3 4
FUNCTION (283) 27 28 29 30 31 32
BEG (284) 42 43
END (285) 42
IF (286) 59 60
CONTINUE (287) 55
ELIF (288) 61 63
ELSE (289) 64 66
NOP (290) 58
WHILE (291) 67 68
RETURN (292) 56 57
BREAK (293) 54
FOR (294) 69 70
INT (295) 22
FLOAT (296) 23
ARROW (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1 2 3 4, on right: 0
declarations (45)
    on left: 5 6 7, on right: 1 2 3 4 5 6 42 43
identifier_list (46)
    on left: 8 9 10, on right: 5 6 9
init (47)
    on left: 11 12 13, on right: 8 9
type (48)
    on left: 14 15 16 17 18 19 20 21, on right: 5 6 27 28 29 30 38
    39 41 117 118
standard_type (49)
    on left: 22 23, on right: 14 15 16 17 18 19 20 21
subprograms (50)
    on left: 24 25, on right: 1 2 3 4 24
subprogram (51)
    on left: 26, on right: 24
subprogram_head (52)
    on left: 27 28 29 30 31 32, on right: 26
args (53)
    on left: 33 34 35, on right: 27 28 29 30 31 32
params (54)
    on left: 36 37, on right: 33 34 37
param (55)
    on left: 38 39 40 41, on right: 36 37
block (56)
    on left: 42 43, on right: 26 49
stmts (57)
    on left: 44 45, on right: 42 43 44
stmt (58)
    on left: 46 47 48 49 50 51 52, on right: 44 59 60 61 63 64 66 67
    68 69 70
stmt_semi (59)
    on left: 53 54 55 56 57 58, on right: 46 47
if (60)
    on left: 59 60, on right: 50
elif (61)
    on left: 61 62 63, on right: 59 60 61 63
else (62)
    on left: 64 65 66, on right: 59 60 67 68 69 70
while (63)
    on left: 67 68, on right: 51
for (64)
    on left: 69 70, on right: 52
variable (65)
    on left: 71 72 73, on right: 113
procedure (66)
    on left: 74 75, on right: 114
expr_list (67)
    on left: 76 77, on right: 74 75
exprs (68)
    on left: 78 79 80, on right: 76 79 80
expr (69)
    on left: 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
    99 100 101 102 103 104 105 106 107 108 109 110 111, on right: 11
    53 56 59 60 61 63 67 68 69 70 72 73 78 79 80 82 83 84 85 86 87
    88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
    107 108 115 116
term (70)
    on left: 112 113 114 115 116 117 118, on right: 81 117


State 0

    0 $accept: . program $end
    1 program: . MAINPROG IDENT ";" declarations subprograms
    2        | . MAINPROG error ";" declarations subprograms
    3        | . MAINPROG IDENT error declarations subprograms
    4        | . MAINPROG error declarations subprograms

    MAINPROG  shift, and go to state 1

    program  go to state 2


State 1

    1 program: MAINPROG . IDENT ";" declarations subprograms
    2        | MAINPROG . error ";" declarations subprograms
    3        | MAINPROG . IDENT error declarations subprograms
    4        | MAINPROG . error declarations subprograms

    error  shift, and go to state 3
    IDENT  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    2 program: MAINPROG error . ";" declarations subprograms
    4        | MAINPROG error . declarations subprograms
    5 declarations: . type identifier_list ";" declarations
    6             | . type identifier_list error declarations
    7             | . %empty  [$end, FUNCTION]
   14 type: . standard_type
   15     | . standard_type "[" NUMBER "]"
   16     | . standard_type "[" NUMBER error
   17     | . standard_type "[" error
   18     | . standard_type "[" error "]"
   19     | . standard_type NUMBER "]"
   20     | . standard_type NUMBER error
   21     | . standard_type "]"
   22 standard_type: . INT
   23              | . FLOAT

    ";"    shift, and go to state 6
    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    $default  reduce using rule 7 (declarations)

    declarations   go to state 9
    type           go to state 10
    standard_type  go to state 11


State 4

    1 program: MAINPROG IDENT . ";" declarations subprograms
    3        | MAINPROG IDENT . error declarations subprograms

    error  shift, and go to state 12
    ";"    shift, and go to state 13


State 5

    0 $accept: program $end .

    $default  accept


State 6

    2 program: MAINPROG error ";" . declarations subprograms
    5 declarations: . type identifier_list ";" declarations
    6             | . type identifier_list error declarations
    7             | . %empty  [$end, FUNCTION]
   14 type: . standard_type
   15     | . standard_type "[" NUMBER "]"
   16     | . standard_type "[" NUMBER error
   17     | . standard_type "[" error
   18     | . standard_type "[" error "]"
   19     | . standard_type NUMBER "]"
   20     | . standard_type NUMBER error
   21     | . standard_type "]"
   22 standard_type: . INT
   23              | . FLOAT

    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    $default  reduce using rule 7 (declarations)

    declarations   go to state 14
    type           go to state 10
    standard_type  go to state 11


State 7

   22 standard_type: INT .

    $default  reduce using rule 22 (standard_type)


State 8

   23 standard_type: FLOAT .

    $default  reduce using rule 23 (standard_type)


State 9

    4 program: MAINPROG error declarations . subprograms
   24 subprograms: . subprogram subprograms
   25            | . %empty  [$end]
   26 subprogram: . subprogram_head block
   27 subprogram_head: . FUNCTION IDENT args ":" type
   28                | . FUNCTION error args ":" type
   29                | . FUNCTION IDENT args error type
   30                | . FUNCTION error args error type
   31                | . FUNCTION IDENT args
   32                | . FUNCTION error args

    FUNCTION  shift, and go to state 15

    $default  reduce using rule 25 (subprograms)

    subprograms      go to state 16
    subprogram       go to state 17
    subprogram_head  go to state 18


State 10

    5 declarations: type . identifier_list ";" declarations
    6             | type . identifier_list error declarations
    8 identifier_list: . IDENT init
    9                | . IDENT init "," identifier_list
   10                | . error

    error  shift, and go to state 19
    IDENT  shift, and go to state 20

    identifier_list  go to state 21


State 11

   14 type: standard_type .  [error, NUMBER, IDENT, ASS, EQUAL, NOTEQU, GREATER, EQUGRE, LESS, EQULESS, IN, ADD, SUB, MUL, DIV, "(", ")", "]", ",", ";", ":", BEG, INT, FLOAT]
   15     | standard_type . "[" NUMBER "]"
   16     | standard_type . "[" NUMBER error
   17     | standard_type . "[" error
   18     | standard_type . "[" error "]"
   19     | standard_type . NUMBER "]"
   20     | standard_type . NUMBER error
   21     | standard_type . "]"

    NUMBER  shift, and go to state 22
    "["     shift, and go to state 23
    "]"     shift, and go to state 24

    NUMBER    [reduce using rule 14 (type)]
    "]"       [reduce using rule 14 (type)]
    $default  reduce using rule 14 (type)


State 12

    3 program: MAINPROG IDENT error . declarations subprograms
    5 declarations: . type identifier_list ";" declarations
    6             | . type identifier_list error declarations
    7             | . %empty  [$end, FUNCTION]
   14 type: . standard_type
   15     | . standard_type "[" NUMBER "]"
   16     | . standard_type "[" NUMBER error
   17     | . standard_type "[" error
   18     | . standard_type "[" error "]"
   19     | . standard_type NUMBER "]"
   20     | . standard_type NUMBER error
   21     | . standard_type "]"
   22 standard_type: . INT
   23              | . FLOAT

    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    $default  reduce using rule 7 (declarations)

    declarations   go to state 25
    type           go to state 10
    standard_type  go to state 11


State 13

    1 program: MAINPROG IDENT ";" . declarations subprograms
    5 declarations: . type identifier_list ";" declarations
    6             | . type identifier_list error declarations
    7             | . %empty  [$end, FUNCTION]
   14 type: . standard_type
   15     | . standard_type "[" NUMBER "]"
   16     | . standard_type "[" NUMBER error
   17     | . standard_type "[" error
   18     | . standard_type "[" error "]"
   19     | . standard_type NUMBER "]"
   20     | . standard_type NUMBER error
   21     | . standard_type "]"
   22 standard_type: . INT
   23              | . FLOAT

    INT    shift, and go to state 7
    FLOAT  shift, and go to state 8

    $default  reduce using rule 7 (declarations)

    declarations   go to state 26
    type           go to state 10
    standard_type  go to state 11


State 14

    2 program: MAINPROG error ";" declarations . subprograms
   24 subprograms: . subprogram subprograms
   25            | . %empty  [$end]
   26 subprogram: . subprogram_head block
   27 subprogram_head: . FUNCTION IDENT args ":" type
   28                | . FUNCTION error args ":" type
   29                | . FUNCTION IDENT args error type
   30                | . FUNCTION error args error type
   31                | . FUNCTION IDENT args
   32                | . FUNCTION error args

    FUNCTION  shift, and go to state 15

    $default  reduce using rule 25 (subprograms)

    subprograms      go to state 27
    subprogram       go to state 17
    subprogram_head  go to state 18


State 15

   27 subprogram_head: FUNCTION . IDENT args ":" type
   28                | FUNCTION . error args ":" type
   29                | FUNCTION . IDENT args error type
   30                | FUNCTION . error args error type
   31                | FUNCTION . IDENT args
   32                | FUNCTION . error args

    error  shift, and go to state 28
    IDENT  shift, and go to state 29


State 16

    4 program: MAINPROG error declarations subprograms .

    $default  reduce using rule 4 (program)


State 17

   24 subprograms: . subprogram subprograms
   24            | subprogram . subprograms
   25            | . %empty  [$end]
   26 subprogram: . subprogram_head block
   27 subprogram_head: . FUNCTION IDENT args ":" type
   28                | . FUNCTION error args ":" type
   29                | . FUNCTION IDENT args error type
   30                | . FUNCTION error args error type
   31                | . FUNCTION IDENT args
   32                | . FUNCTION error args

    FUNCTION  shift, and go to state 15

    $default  reduce using rule 25 (subprograms)

    subprograms      go to state 30
    subprogram       go to state 17
    subprogram_head  go to state 18


State 18

   26 subprogram: subprogram_head . block
   42 block: . BEG declarations stmts END
   43      | . BEG declarations stmts error

    BEG  shift, and go to state 31

    block  go to state 32


State 19

   10 identifier_list: error .

    $default  reduce using rule 10 (identifier_list)


State 20

    8 identifier_list: IDENT . init
    9                | IDENT . init "," identifier_list
   11 init: . ASS expr
   12     | . %empty  [error, ",", ";"]
   13     | . ASS error

    ASS  shift, and go to state 33

    $default  reduce using rule 12 (init)

    init  go to state 34


State 21

    5 declarations: type identifier_list . ";" declarations
    6             | type identifier_list . error declarations

    error  shift, and go to state 35
    ";"    shift, and go to state 36


State 22

   19 type: standard_type NUMBER . "]"
   20     | standard_type NUMBER . error

    error  shift, and go to state 37
    "]"    shift, and go to state 38


State 23

   15 type: standard_type "[" . NUMBER "]"
   16     | standard_type "[" . NUMBER error
   17     | standard_type "[" . error
   18     | standard_type "[" . error "]"

    error   shift, and go to state 39
    NUMBER  shift, and go to state 40


State 24

   21 type: standard_type "]" .

    $default  reduce using rule 21 (type)


State 25

    3 program: MAINPROG IDENT error declarations . subprograms
   24 subprograms: . subprogram subprograms
   25            | . %empty  [$end]
   26 subprogram: . subprogram_head block
   27 subprogram_head: . FUNCTION IDENT args ":" type
   28                | . FUNCTION error args ":" type
   29                | . FUNCTION IDENT args error type
   30                | . FUNCTION error args error type
   31                | . FUNCTION IDENT args
   32                | . FUNCTION error args

    FUNCTION  shift, and go to state 15

    $default  reduce using rule 25 (subprograms)

    subprograms      go to state 41
    subprogram       go to state 17
    subprogram_head  go to state 18


State 26

    1 program: MAINPROG IDENT ";" declarations . subprograms
   24 subprograms: . subprogram subprograms
   25            | . %empty  [$end]
   26 subprogram: . subprogram_head block
   27 subprogram_head: . FUNCTION IDENT args ":" type
   28                | . FUNCTION error args ":" type
   29                | . FUNCTION IDENT args error type
   30                | . FUNCTION error args error type
   31                | . FUNCTION IDENT args
   32                | . FUNCTION error args

    FUNCTION  shift, and go to state 15

    $default  reduce using rule 25 (subprograms)

    subprograms      go to state 42
    subprogram       go to state 17
    subprogram_head  go to state 18


State 27

    2 program: MAINPROG error ";" declarations subprograms .

    $default  reduce using rule 2 (program)


State 28

   28 subprogram_head: FUNCTION error . args ":" type
   30                | FUNCTION error . args error type
   32                | FUNCTION error . args
   33 args: . "(" params ")"
   34     | . "(" params error
   35     | . %empty  [error, ":", BEG]

    "("  shift, and go to state 43

    $default  reduce using rule 35 (args)

    args  go to state 44


State 29
